--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -17,7 +17,7 @@
                 <view class="weui-search-bar__text">搜索</view>
             </label>
         </view>
-        <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="setSearchStorage">搜索</view>
+        <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="setSearchStorage" style='color:#67C23A'>搜索</view>
     </view>  
 </view>
 <view class="header">
