--- a/pages/school/school.wxml
+++ b/pages/school/school.wxml
@@ -18,7 +18,7 @@
                 <view class="weui-search-bar__text">搜索</view>
             </label>
         </view>
-        <view class="weui-search-bar__cancel-btn sousuo" hidden="{{!inputShowed}}" bindtap="setSearchStorage">搜索</view>
+        <view class="weui-search-bar__cancel-btn sousuo" hidden="{{!inputShowed}}" bindtap="setSearchStorage" style='color:#67C23A'>搜索</view>
     </view>  
 </view>
 <view class="header">
