gd：小程序搞定

--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -98,38 +98,42 @@
 	<!-- vip -->
 	<view class="weui-cells__title" style='color:#22C5B3'>开通 VIP</view>
 	<view class="weui-cells weui-cells_after-title">
-  <navigator url="" hover-class="navigator-hover" open-type='navigate'>
-		<view class="weui-cell" bindtap="single" id='1' style='border-top: 1px solid #eee'>
-			<view class="weui-cell__hd">
-				<image src="./img/vip1.svg" style="margin-right: 5px; vertical-align: middle; width:20px; height: 20px;"></image>
-			</view>
-			<view class="weui-cell__bd">开通初级会员</view>
-		</view>
-  </navigator>
-  <navigator url="" hover-class="navigator-hover" open-type='navigate'>
-		<view class="weui-cell" bindtap="single" id='2'>
-			<view class="weui-cell__hd">
-				<image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-			</view>
-			<view class="weui-cell__bd">开通高级会员</view>
-		</view>
-  </navigator>
-  <!-- <navigator url="" hover-class="navigator-hover" open-type='navigate'>
-		<view class="weui-cell" bindtap="single" id='2'>
-			<view class="weui-cell__hd">
-				<image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-			</view>
-			<view class="weui-cell__bd">开通高级会员</view>
-		</view>
-  </navigator> -->
-  <navigator url="" hover-class="navigator-hover" open-type='navigate'>
-		<view class="weui-cell" bindtap="single" id='4'>
-			<view class="weui-cell__hd">
-				<image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-			</view>
-			<view class="weui-cell__bd">激活会员卡</view>
-		</view>
-  </navigator>
+  <view wx:if="{{hide}}">
+    <navigator url="" hover-class="navigator-hover" open-type='navigate'>
+      <view class="weui-cell" bindtap="single" id='1' style='border-top: 1px solid #eee'>
+        <view class="weui-cell__hd">
+          <image src="./img/vip1.svg" style="margin-right: 5px; vertical-align: middle; width:20px; height: 20px;"></image>
+        </view>
+        <view class="weui-cell__bd">开通初级会员</view>
+      </view>
+    </navigator>
+    <navigator url="" hover-class="navigator-hover" open-type='navigate'>
+      <view class="weui-cell" bindtap="single" id='2'>
+        <view class="weui-cell__hd">
+          <image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+        </view>
+        <view class="weui-cell__bd">开通高级会员</view>
+      </view>
+    </navigator>
+    <navigator url="" hover-class="navigator-hover" open-type='navigate'>
+      <view class="weui-cell" bindtap="single" id='3'>
+        <view class="weui-cell__hd">
+          <image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+        </view>
+        <view class="weui-cell__bd">激活会员卡</view>
+      </view>
+    </navigator>
+  </view>
+  <view wx:else>
+    <navigator url="" hover-class="navigator-hover" open-type='navigate'>
+      <view class="weui-cell" bindtap="single" id='4'>
+        <view class="weui-cell__hd">
+          <image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+        </view>
+        <view class="weui-cell__bd">开通高级会员</view>
+      </view>
+    </navigator>
+  </view>
 	</view>
 </view>
 
