--- a/pages/person/improve/improve.wxml
+++ b/pages/person/improve/improve.wxml
@@ -16,16 +16,16 @@
   <view class='banner'>
     <image src="{{single2}}"></image>
   </view>
-  <view class='btn' bindtap='pay' id="20000"><text class='text'>体验会员享受折上折 200￥ 购买</text></view>
+  <view class='btn' bindtap='pay' id="{{total}}"><text class='text'>体验会员享受折上折 200￥ 购买</text></view>
 </view>
-<view wx:if="{{id == 3}}">
+<view wx:if="{{id == 5}}">
   <view class='banner'>
     <image src="{{single3}}"></image>
   </view>
   <view class='btn' bindtap='pay' id="5000"><text class='text'>立即购买</text></view>
 </view>
 
-<view wx:if="{{id == 4}}">
+<view wx:if="{{id == 3}}">
 <form bindsubmit="cardUp">
 	<view class="weui-cells__title">激活会员卡</view>
 	<view class="weui-cells weui-cells_after-title">
