--- a/pages/teacher/teacher.wxml
+++ b/pages/teacher/teacher.wxml
@@ -83,8 +83,8 @@
                         <image src="{{item.headurl}}" style="width: 50px; height: 50px; display: block"/>
                     </view>
                     <view class="weui-cell__bd">
-                        <view>{{item.NICKNAME}}</view>
-                        <view style="font-size: 13px;color: #888888;">专家</view>
+                        <view>{{item.NICKNAME}}<text style="font-size: 10px;color: #888888;margin-left:10px;">铭邦高考规划平台认证专家</text></view>
+                        <view style="font-size: 11px;color: #888888;">服务地区：河北省</view>
                     </view>
                 </view>
             </view>
