--- a/pages/video/play/play.wxml
+++ b/pages/video/play/play.wxml
@@ -4,7 +4,8 @@
         <video id="myVideo" src="{{src}}" controls show-fullscreen-btn show-center-play-btn enable-progress-gesture loop="true" autoplay="{{autoplay}}"></video>
         <view class='page-center'>
         <view class='page-center-title'>{{title}}</view>
-        <text class='page-center-play'>{{count}}次播放</text>
+        <!-- 增加基础值25626 -->
+        <text class='page-center-play'>{{count+25626}}次播放</text>
       </view>
     </view>
     <view class="BottomBlock">
